[gd_scene load_steps=4 format=3 uid="uid://iy6s2au50nfs"]

[ext_resource type="Script" uid="uid://dbk4ipfq0s1lh" path="res://scripts/MiniGame Scripts/Beach Breaker/breaker_player.gd" id="1_eipsh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mggp"]
size = Vector2(82, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eipsh"]
size = Vector2(110, 24)

[node name="BreakerPlayer" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_eipsh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3mggp")

[node name="PaddleHit" type="Area2D" parent="."]
position = Vector2(0, -34)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaddleHit"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_eipsh")
disabled = true

[node name="RayL" type="RayCast2D" parent="."]
target_position = Vector2(-56, 0)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="RayR" type="RayCast2D" parent="."]
target_position = Vector2(56, 0)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
